src/test/deca/syntax/invalid/declMethod-redefinitionNull.synt
declMethod-redefinitionNull.deca:7:
